feat: 完善批量操作、GIS进阶功能与地图易用性
- 批量操作: 水利/配套设施/种植记录批量改/删, 设施分类批量转移, 撂荒治理任务批量下发,
  确权地块空间框选批量改属性; 修复批量更新绕过乐观锁的问题(逐行 updateById 替代批量 UpdateWrapper SQL)
- GIS进阶: 空间范围查询, 配套设施服务范围绘制, 地块Shapefile/KML导入, 地块几何编辑(节点编辑/分割/合并)
- 地图易用性: 点位聚合, 搜索定位, 状态/用途筛选, 统一图例图层开关, 绘图模式提示条;
  修复聚合插件(markercluster)与circleMarker不兼容导致缩放报错的问题
- 区划选择器: 直接从延吉市下属乡镇/村选择, 不再重复选省/自治州/市
- 其他: 待审核中心可点击详情、撂荒统计分析图表、附件图片/PDF直接预览等多项交互体验修复

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>